# SlicerTrajectoryROIAnalysis

./: CMakeLists.txt  README.md  USER_GUIDE.md
TrajectoryROIAnalysis/: CMakeLists.txt  LICENSE.txt  TrajectoryROIAnalysis.py
TrajectoryROIAnalysis/Lib/: constants.py  csv_io.py  geometry.py  plotting.py  roi.py  segmentation.py  statistics.py  trajectory.py  utils.py  visualization.py
TrajectoryROIAnalysis/Resources/UI/: TrajectoryROIAnalysis.ui
